test: expand unit test coverage for driver trip, trip, vehicle, store, route, and manifest services